<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.add.SpendingAddFragment">

    <EditText
        android:id="@+id/spendingName_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/add_page_spending_name"
        android:background="@drawable/textview_shape"
        android:textSize="20dp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/spendingAmount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_page_amount"
        android:textSize="20dp"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:background="@drawable/textview_shape"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendingName_text" />

    <RadioGroup
        android:id="@+id/radioGroupSpendingType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendingAmount_text">

        <RadioButton
            android:id="@+id/add_page_spending_invoive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_spending_invoice" />

        <RadioButton
            android:id="@+id/add_page_spending_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_spending_rent" />

        <RadioButton
            android:id="@+id/add_page_spending_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_spending_other" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSpendingType">

        <RadioButton
            android:id="@+id/radio_tl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_currency_tl" />

        <RadioButton
            android:id="@+id/radio_dolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_currency_dolar" />

        <RadioButton
            android:id="@+id/radio_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_currency_euro" />

        <RadioButton
            android:id="@+id/radio_sterlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_currency_sterlin" />
    </RadioGroup>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_layout_shape"
        android:text="Add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCurrency"
        />

</androidx.constraintlayout.widget.ConstraintLayout>