<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FF5722"
    tools:context=".fragments.update.UpdateUserFragment">

    <EditText
        android:id="@+id/userName_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textview_shape"
        android:ems="10"
        android:hint="@string/update_page_user_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupUsernGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_text">

        <RadioButton
            android:id="@+id/update_page_user_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_page_user_man" />

        <RadioButton
            android:id="@+id/update_page_user_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_page_user_women" />

        <RadioButton
            android:id="@+id/update_page_user_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_other" />

    </RadioGroup>

    <Button
        android:id="@+id/update_user_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_layout_shape"
        android:textColor="@color/white"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupUsernGender" />

</androidx.constraintlayout.widget.ConstraintLayout>